corpus/c/redefinition/case-01/snapshots/gcc15_plus/dual_sink_structured/subject_blocks_v1/render.default.txt
error: [redefinition] duplicate definition detected @ src/main.c:2:5
help: add or fix include guards, or remove the duplicate definition
now : src/main.c:2:5 int counter = 1;
prev: src/main.c:1:5 int counter = 0;
| src/main.c:2:5
| int counter = 1;
|     ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output